# RayTracer

./: .gitignore  CMakeLists.txt  MyRender.py  README.md  baseobject.cpp  baseobject.h  bbox.cpp  bbox.h  camera.cpp  camera.h  color.cpp  color.h  constants.h  get_object.h  light.cpp  light.h  main.cpp  material.cpp  material.h  my_try.py  output.cpp  output.h  parallel.cpp  parallel.h  plane.cpp  plane.h  point3.cpp  point3.h  pointlight.cpp  pointlight.h  ray.cpp  ray.h  rectangle.cpp  rectangle.h  rectlight.cpp  rectlight.h  render.cpp  render1.c  render_engine.py  sahkdtree.cpp  (+19 more)
